Name:           CheatSheet
License:        BSD3
License-File:   LICENSE
Version:        2.2
Homepage:       http://cheatsheet.codeslower.com
Maintainer:     Justin Bailey <jgbailey@codeslower.com>
Author:     Justin Bailey <jgbailey@codeslower.com>
Category:       Help
Build-Depends:  base >=3 && < 5, containers, directory
Build-type: Simple
Synopsis:       A Haskell cheat sheet in PDF and literate formats.
Description:
  This module includes a PDF giving a synopsis of Haskell syntax, keywords,
  and other essentials. It also has a literate source file which allows all
  examples to be inspected. Download and unpack this archive to view them.
Data-files: CheatSheet.pdf, CheatSheet.lhs
Extra-Source-Files: CheatSheet.lhs, README

Executable: cheatsheet
Main-Is: Main.lhs
Hs-Source-Dirs: . 

